force-app/main/default/objects/Expansion_City__c/Expansion_City__c.object-meta.xml
<CustomObject>
    <description>Created by: VC
Business Unit: Commercial Readiness
Purpose: Track Expansion city metrics for commercial readiness</description>
    <label>Expansion City</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Expansion City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expansion Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>