force-app/main/default/objects/Expansion_City__c/fields/Best_National_Universities_Link__c.field-meta.xml
<CustomField>
    <fullName>Best_National_Universities_Link__c</fullName>
    <defaultValue>&quot;https://www.usnews.com/best-colleges/rankings/national-universities&quot;</defaultValue>
    <description>GS
Purpose: A read-only link to the current years best universities.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Best National Universities Link</label>
    <type>Url</type>
</CustomField>