force-app/main/default/objects/Expansion_City__c/fields/Bitwise_Match_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Bitwise_Match_Percentage__c</fullName>
    <description>GS
Makes the Bitwise Match Calculation into a Percentage</description>
    <formula>Bitwise_Match_Score__c / 15.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bitwise Match Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>