force-app/main/default/objects/Expansion_City__c/fields/Census_Link__c.field-meta.xml
<CustomField>
    <fullName>Census_Link__c</fullName>
    <defaultValue>&quot;https://www.census.gov/quickfacts/fact/table/US/PST045219&quot;</defaultValue>
    <description>VC
Read-Only Link to Census Website for current city data.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Census Link</label>
    <type>Url</type>
</CustomField>