force-app/main/default/objects/Expansion_City__c/fields/Distance_From_Nearest_Top_10_Metro__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Nearest_Top_10_Metro__c</fullName>
    <description>GS</description>
    <label>Distance From Nearest Top 10 Metro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;50 Miles</fullName>
            </value>
            <value>
                <fullName>25-50 Miles</fullName>
            </value>
            <value>
                <fullName>&lt;25 Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>