force-app/main/default/objects/Expansion_City__c/fields/Distance_From_Nearest_Top_10_Metro_Score__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Nearest_Top_10_Metro_Score__c</fullName>
    <description>GS
Purpose: Tracks the score for Distance from nearest top 10 metro score depending on the picklist values.
**DO NOT DISPLAY**</description>
    <formula>IF( ISPICKVAL( Distance_From_Nearest_Top_10_Metro__c , &quot;&gt;50 Miles&quot;), 1 ,
   IF( ISPICKVAL( Distance_From_Nearest_Top_10_Metro__c , &quot;25-50 Miles&quot;), 0.5 ,
      IF( ISPICKVAL( Distance_From_Nearest_Top_10_Metro__c , &quot;&lt;25 Miles&quot;), 0 , null
         )
      )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DO NOT DISPLAY</inlineHelpText>
    <label>Distance From Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>