force-app/main/default/objects/Expansion_City__c/fields/Diversity_of_Population_POC__c.field-meta.xml
<CustomField>
    <fullName>Diversity_of_Population_POC__c</fullName>
    <description>GS
Purpose: Shows the diversity by the percentage of people of color.</description>
    <label>Diversity of Population - % POC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;25%</fullName>
            </value>
            <value>
                <fullName>25-50%</fullName>
            </value>
            <value>
                <fullName>&gt;50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>