force-app/main/default/objects/Expansion_City__c/fields/Diversity_of_Population_POC_Score__c.field-meta.xml
<CustomField>
    <fullName>Diversity_of_Population_POC_Score__c</fullName>
    <description>GS
Purpose: Tracks the score of Diversity of Population depending on the picklist values.
**DO NOT DISPLAY**</description>
    <formula>IF( ISPICKVAL(  Diversity_of_Population_POC__c , &quot;&lt;25%&quot; ), 0 ,
   IF( ISPICKVAL(  Diversity_of_Population_POC__c , &quot;25-50%&quot; ), 0.5 ,
      IF( ISPICKVAL(  Diversity_of_Population_POC__c , &quot;&gt;50%&quot; ), 1 , null
         )
      )
   )</formula>
    <inlineHelpText>DO NOT DISPLAY</inlineHelpText>
    <label>Diversity of Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>