force-app/main/default/objects/Expansion_City__c/fields/Level_Of_Tech_Activity__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Tech_Activity__c</fullName>
    <description>GS</description>
    <label>Level Of Tech Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tech Success Here</fullName>
            </value>
            <value>
                <fullName>Some Tech Activity</fullName>
            </value>
            <value>
                <fullName>No Tech Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>