force-app/main/default/objects/Expansion_City__c/fields/Level_Of_Tech_Activity_Score__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Tech_Activity_Score__c</fullName>
    <description>GS
Purpose: Tracking the score for Level of Tech Activity based on the picklist values.</description>
    <formula>IF( ISPICKVAL( Level_Of_Tech_Activity__c , &quot;Tech Success Here&quot;), 0 ,
    IF( ISPICKVAL( Level_Of_Tech_Activity__c , &quot;Some Tech Activity&quot;), 1 ,
        IF( ISPICKVAL( Level_Of_Tech_Activity__c , &quot;No Tech Activity&quot;), 0.5 , null
           )
       )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Of Tech Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>