force-app/main/default/objects/Expansion_City__c/fields/Major_Airport__c.field-meta.xml
<CustomField>
    <fullName>Major_Airport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS</description>
    <inlineHelpText>Does this Metro area contain a major airport?
(Hub or &gt;2 daily flights to hub)</inlineHelpText>
    <label>Major Airport</label>
    <type>Checkbox</type>
</CustomField>