force-app/main/default/objects/Expansion_City__c/fields/Major_Airport_Score__c.field-meta.xml
<CustomField>
    <fullName>Major_Airport_Score__c</fullName>
    <description>GS
Purpose: Tracks the score for the Major Airport checkbox.</description>
    <formula>IF( Major_Airport__c = True, 0.5 , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Major Airport Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>