force-app/main/default/objects/Expansion_City__c/fields/Median_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Median_Household_Income__c</fullName>
    <description>GS</description>
    <label>Median Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;$80K</fullName>
            </value>
            <value>
                <fullName>&lt;$80K</fullName>
            </value>
            <value>
                <fullName>&lt;$70K</fullName>
            </value>
            <value>
                <fullName>&lt;$60K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>