force-app/main/default/objects/Expansion_City__c/fields/Median_Household_Income_Score__c.field-meta.xml
<CustomField>
    <fullName>Median_Household_Income_Score__c</fullName>
    <description>GS
Purpose: Sets a score for median household income depending on the picklist value.</description>
    <formula>IF( ISPICKVAL( Median_Household_Income__c , &quot;&gt;$80k&quot; ), 0 ,
   IF( ISPICKVAL( Median_Household_Income__c , &quot;&lt;$80k&quot; ), 1 ,
      IF( ISPICKVAL( Median_Household_Income__c , &quot;&lt;$70k&quot; ), 2 ,
         IF( ISPICKVAL( Median_Household_Income__c , &quot;&lt;$60k&quot; ), 3 , null
	   )
        )
    )
)</formula>
    <label>Median Household Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>