force-app/main/default/objects/Expansion_City__c/fields/Metro_Population__c.field-meta.xml
<CustomField>
    <fullName>Metro_Population__c</fullName>
    <description>GS</description>
    <label>Metro Population</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;100k</fullName>
            </value>
            <value>
                <fullName>&gt;100k</fullName>
            </value>
            <value>
                <fullName>&gt;500k</fullName>
            </value>
            <value>
                <fullName>&gt;1M</fullName>
            </value>
            <value>
                <fullName>&gt;1.5M</fullName>
            </value>
            <value>
                <fullName>&gt;2M</fullName>
            </value>
            <value>
                <fullName>&gt;2.5M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>