force-app/main/default/objects/Expansion_City__c/fields/Metro_Population_Score__c.field-meta.xml
<CustomField>
    <fullName>Metro_Population_Score__c</fullName>
    <description>GS
Purpose: Tracks the score of Metro Population based on the picklist value.</description>
    <formula>IF( ISPICKVAL( Metro_Population__c  , &quot;&lt;100k&quot; ), 0 , 
    IF( ISPICKVAL( Metro_Population__c , &quot;&gt;100k&quot; ), 0.5 ,
        IF( ISPICKVAL( Metro_Population__c , &quot;&gt;500k&quot; ), 1 ,
            IF( ISPICKVAL( Metro_Population__c , &quot;&gt;1M&quot; ), 1.5 ,
                IF( ISPICKVAL( Metro_Population__c , &quot;&gt;1.5M&quot; ), 1 ,
                    IF( ISPICKVAL( Metro_Population__c , &quot;&gt;2M&quot; ), 0.5 ,
                        IF( ISPICKVAL( Metro_Population__c , &quot;&gt;2.5M&quot; ), 0 , null
                           )
                       )
                   )
               )
           )
       )
  )</formula>
    <label>Metro Population Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>