force-app/main/default/objects/Expansion_City__c/fields/Non_Traditional_Tech_Educator__c.field-meta.xml
<CustomField>
    <fullName>Non_Traditional_Tech_Educator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS</description>
    <inlineHelpText>Does this Metro Area have non-traditional tech educator or program with traction?</inlineHelpText>
    <label>Non-Traditional Tech Educator</label>
    <type>Checkbox</type>
</CustomField>