force-app/main/default/objects/Expansion_City__c/fields/Non_Traditional_Tech_Educator_Score__c.field-meta.xml
<CustomField>
    <fullName>Non_Traditional_Tech_Educator_Score__c</fullName>
    <description>GS
Purpose: Tracks the score of the Non-Traditional Tech Educator based on the checkbox value.</description>
    <formula>IF( Non_Traditional_Tech_Educator__c = True, 0 , 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Traditional Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>