force-app/main/default/objects/Expansion_City__c/fields/Number_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Opportunities__c</fullName>
    <description>GS
Business Unit: City Expansion
Purpose: Calculated via Flow</description>
    <inlineHelpText>Number of all Open Opportunities except Closed/Lost OR Closed/Won.</inlineHelpText>
    <label>Number of Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>