force-app/main/default/objects/Expansion_City__c/fields/Number_of_Opportunities_Total__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Opportunities_Total__c</fullName>
    <description>GS
Business Unit: City Expansion
Purpose: Calculated via Flow Roll-up</description>
    <inlineHelpText>The total of all Opportunities even Closed/Lost.</inlineHelpText>
    <label>Number of Opportunities (Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>