force-app/main/default/objects/Expansion_City__c/fields/Per_Capita_Income__c.field-meta.xml
<CustomField>
    <fullName>Per_Capita_Income__c</fullName>
    <description>GS</description>
    <label>Per Capita Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;$30k</fullName>
            </value>
            <value>
                <fullName>$28-30k</fullName>
            </value>
            <value>
                <fullName>$22-28k</fullName>
            </value>
            <value>
                <fullName>&lt;$22k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>