force-app/main/default/objects/Expansion_City__c/fields/Per_Capita_Income_Score__c.field-meta.xml
<CustomField>
    <fullName>Per_Capita_Income_Score__c</fullName>
    <description>GS
Purpose: Gathers the score for Per Capita Income depending on the picklist value.</description>
    <formula>IF( ISPICKVAL(Per_Capita_Income__c, &quot;&gt;$30k&quot; ) , 0 ,  
   IF(ISPICKVAL(Per_Capita_Income__c, &quot;$28-30k&quot; ), 1 ,
      IF( ISPICKVAL(Per_Capita_Income__c, &quot;$22-28k&quot; ), 2 ,
         IF( ISPICKVAL(Per_Capita_Income__c, &quot;&lt;$22k&quot; ), 3 , null
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Capita Income Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>