force-app/main/default/objects/Expansion_City__c/fields/PostalCodes__c.field-meta.xml
<CustomField>
    <fullName>PostalCodes__c</fullName>
    <description>GS
Business Unit: City Expansion</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Separate Zip/Postal Codes by commas.</inlineHelpText>
    <label>Zip/Postal Codes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>