force-app/main/default/objects/Expansion_City__c/fields/Potential_Value_of_Opportunities_Total__c.field-meta.xml
<CustomField>
    <fullName>Potential_Value_of_Opportunities_Total__c</fullName>
    <description>Created by: VC
Business Unit: City Expansion
Purpose: Calculated via Flow Roll-up</description>
    <inlineHelpText>The total amount of all Opportunities except Closed/Lost.</inlineHelpText>
    <label>Potential Value of Opportunities (Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>