force-app/main/default/objects/Expansion_City__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>GS
Purpose: Status for Expansion City build.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Exploration</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Secure</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>