force-app/main/default/objects/Expansion_City__c/fields/Top_50_University__c.field-meta.xml
<CustomField>
    <fullName>Top_50_University__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GS</description>
    <inlineHelpText>Does this Metro Area contain a Top 50 University?</inlineHelpText>
    <label>Top 50 University</label>
    <type>Checkbox</type>
</CustomField>