force-app/main/default/objects/Expansion_City__c/fields/Top_50_University_Score__c.field-meta.xml
<CustomField>
    <fullName>Top_50_University_Score__c</fullName>
    <description>GS
Purpose: Tracks the score based on the checkbox.</description>
    <formula>IF( Top_50_University__c = True, 0 , 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top 50 University Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>