force-app/main/default/objects/Expansion_City__c/fields/Transit_Score__c.field-meta.xml
<CustomField>
    <fullName>Transit_Score__c</fullName>
    <description>GS</description>
    <label>Transit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>