force-app/main/default/objects/Expansion_City__c/fields/Transit_Score_Score__c.field-meta.xml
<CustomField>
    <fullName>Transit_Score_Score__c</fullName>
    <description>GS
Purpose: Converts the transit score into a decimal for scoring purpose.</description>
    <formula>Transit_Score__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transit Score Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>