force-app/main/default/objects/Expansion_City__c/fields/Value_of_Opportunities_Committed__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Opportunities_Committed__c</fullName>
    <description>Created by: VC
Business Unit: City Expansion
Purpose: Calculated via Flow Roll-Up</description>
    <inlineHelpText>The total amount of only Closed Won Opportunities.</inlineHelpText>
    <label>Value of Opportunities (Committed)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>