force-app/main/default/objects/Expansion_City__c/fields/Walkability_Score_Score__c.field-meta.xml
<CustomField>
    <fullName>Walkability_Score_Score__c</fullName>
    <description>GS
Purpose: Turns the walkability score into a decimal</description>
    <formula>Walkability_Score__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Walkability Score Score (Do Not Display)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>