force-app/main/default/objects/Expansion_City__c/fields/Walkability_Transit_Score_Link__c.field-meta.xml
<CustomField>
    <fullName>Walkability_Transit_Score_Link__c</fullName>
    <defaultValue>&quot;https://www.walkscore.com&quot;</defaultValue>
    <description>GS
Purpose: A read-only field to better access the walk score link.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Walkability/Transit Score Link</label>
    <type>Url</type>
</CustomField>