force-app/main/default/objects/Expansion_City__c/validationRules/Walkability_Transit_Score_No_Over_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Walkability_Transit_Score_No_Over_100</fullName>
    <active>true</active>
    <description>GS
Business Unit: City Expansion
Purpose: To prevent a walkability/transit score of over 100.</description>
    <errorConditionFormula>OR( Walkability_Score__c &gt; 100,
Transit_Score__c &gt; 100
)</errorConditionFormula>
    <errorMessage>The transit and/or walkability score cannot be over 100.</errorMessage>
</ValidationRule>