force-app/main/default/objects/Expansion_City__c/listViews/Expansion_Cities_All.listView-meta.xml
<ListView>
    <fullName>Expansion_Cities_All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <columns>Bitwise_Match_Percentage__c</columns>
    <columns>Potential_Value_of_Opportunities_Total__c</columns>
    <columns>Value_of_Opportunities_Committed__c</columns>
    <filterScope>Everything</filterScope>
    <label>Expansion Cities - All</label>
</ListView>